fix: image of book over stretch in ipad

--- a/src/components/book/book.scss
+++ b/src/components/book/book.scss
@@ -20,7 +20,7 @@
   & > img {
     width: 100%;
     max-width: 20rem;
-    height: 100%;
+    height: min(25rem, 310px);
   }
 }
 
